k8s/apps/default/envoy-echo-tap/app/resources/envoy.yaml
static_resources:
  listeners:
    - name: echo_tap_listener
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: echo_tap
                route_config:
                  name: echo_tap
                  virtual_hosts:
                    - name: echo
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: echo_upstream
                            host_rewrite_literal: echo.cbannister.xyz
                http_filters:
                  - name: envoy.filters.http.tap
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.tap.v3.Tap
                      common_config:
                        admin_config:
                          config_id: echo-tap
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: echo_upstream
      type: STRICT_DNS
      connect_timeout: 5s
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: echo_upstream
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: echo.cbannister.xyz
                      port_value: 443
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          sni: echo.cbannister.xyz
          common_tls_context:
            alpn_protocols:
              - h2
              - http/1.1
            validation_context:
              trusted_ca:
                filename: /etc/ssl/certs/ca-certificates.crt
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
